nginx-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    component: core
  name: nginx-ingress-controller
spec:
  clusterIP: 172.21.100.225
  clusterIPs:
  - 172.21.100.225
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  loadBalancerIP: 172.61.187.51
  loadBalancerSourceRanges:
  - 10.21.244.0/22
  ports:
  - name: https
    nodePort: 30721
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: nginx-ingress-controller
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 172.61.187.51
